--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "dependencies": {
     "alfy": "^0.7.0",
-    "trimet-api-client": "^2.0.5"
+    "node-fetch": "^2.2.0"
   },
-  "main": "dist/index.js",
-  "devDependencies": {
-    "babel-preset-es2015": "^6.24.1"
-  }
+  "main": "index.js"
 }
